k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: naga-fct
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /naga-fct
      - /api/naga-fct
