k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: naga-fct
  name: naga-fct-springboot
  labels:
    app: naga-fct
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naga-fct
      tier: backend
  template:
    metadata:
      labels:
        app: naga-fct
        tier: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/rexwithluv/naga-fct-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          # livenessProbe:
          #   httpGet:
          #     path: /health/liveness
          #     port: 3000
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
          #   timeoutSeconds: 5
          #   failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: github-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: naga-fct
  name: naga-fct-vue
  labels:
    app: naga-fct
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naga-fct
      tier: frontend
  template:
    metadata:
      labels:
        app: naga-fct
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/rexwithluv/naga-fct-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      imagePullSecrets:
        - name: github-credentials
