k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: naga-fct
  name: springboot-service
spec:
  selector:
    app: naga-fct
    tier: backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: naga-fct
  name: vue-service
spec:
  selector:
    app: naga-fct
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: naga-fct
  name: mariadb-service
spec:
  selector:
    app: naga-fct
    tier: db
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
